--- a/count.css
+++ b/count.css
@@ -34,11 +34,18 @@ input[type="text"]{
 }
 
 button{
-  width: 50%;;
+  width: 70%;
   height: 60px;
   position: relative;
   border-radius: 12px;
   top: 85px;
-  left: 52px;
+  left: 30px;
 
+}
+
+p{
+  color: white;
+  position: relative;
+  margin-left: 38%;
+  margin-top: 93px;
 }
